# SETR_11_14

./: CMakeLists.txt  README.md  mainpage.dox  nrf52840dk_nrf52840.overlay  prj.conf
documentation/html/: _8cmake_8dotconfig_8checksum_source.html  _8config_source.html  _8ninja__deps_source.html  _8ninja__log_source.html  _c_make_a_s_m_compiler_8cmake_source.html  _c_make_c_compiler_8cmake_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_compiler_id_8o_source.html  _c_make_c_x_x_compiler_8cmake_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_c_x_x_compiler_id_8o_source.html  _c_make_error_8log_source.html  _c_make_files_2zephyr_8dir_2lib_2os_2sem_8c_8obj_source.html  _c_make_files_2zephyr__final_8dir_2isr__tables_8c_8obj_source.html  _c_make_output_8log_source.html  _c_make_system_8cmake_source.html  _kconfig_8modules_source.html  _kconfig_8shield_8defconfig_source.html  _kconfig_8shield_source.html  _s_e_g_g_e_r___r_t_t_8c_8obj_source.html  _s_e_g_g_e_r___r_t_t__zephyr_8c_8obj_source.html  _s_e_t_r___mini_project___zephyr_i_o_8pdf_source.html  _zephyr_intro_8pdf_source.html  abort_8c_8obj_source.html  adc_8h_source.html  adc__channel__setup__mrsh_8c_source.html  adc__read__async__mrsh_8c_source.html  adc__read__mrsh_8c_source.html  annotated.html  annotated_dup.js  app__data__alignment_8ld_source.html  app__smem_8ld_source.html  app__smem__aligned_8ld_source.html  app__smem__unaligned_8ld_source.html  arch_2common_2_c_make_files_2isr__tables_8dir_2isr__tables_8c_8obj_source.html  (+1523 more)
src/: main.c
unity_testing/: makefile  testuart
(+38 files in other folders)
